--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,7 @@ p {
   font-family: 'IMFellEnglish', serif;
   text-align: center;
 }
+
+.reception-details {
+  font-family: 'IMFellEnglish-Regular', serif;
+}
