--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   src: url('IMFellEnglish-Regular.ttf') format('truetype');
 }
 @font-face {
-  font-family: 'IMFellEnglish';
+  font-family: 'Parisienne';
   src: url('Parisienne-Regular.ttf') format('truetype');
 }
 body {
