--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,15 @@ p {
   letter-spacing: 1px;
 }
 
+.faq h3 {
+  font-family: 'Parisienne', sans-serif;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
 .faq-item {
   margin-bottom: 1rem;
   border-bottom: 1px solid #ccc;
