--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,8 @@ p {
   letter-spacing: 1px;
 }
 
-.faq h3 {
-  font-family: 'Parisienne', sans-serif;
+.names {
+  font-family: 'Parisienne', cursive;
   margin-top: 3rem;
   margin-bottom: 1rem;
   font-size: 1.5rem;
