--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ p {
   margin-top: 3rem;
   margin-bottom: 1rem;
   font-size: 3rem;
+  font-weight: normal;
   /*text-transform: uppercase;
 */
   letter-spacing: 1px;
